-
Bug
-
Resolution: Done
-
P1: Critical
-
5.5.1
-
None
When using function.bind(this) the garbage collector will crash if it triggers at the wrong time. The cause of the crash is that target in BoundFunction::markObjects() is null.
Attached a small test example - running it with QV4_MM_AGGRESSIVE_GC=1 consistently crashes.
- duplicates
-
QTBUG-41608 QML GC Crash
-
- Closed
-